# CVsim

./: .coveragerc  .gitignore  .mypy.ini  .pylintrc  .readthedocs.yaml  LICENSE  README.md  cv_fitting.py  mechanisms.py  one_electron_CV.py  one_electron_multiscan.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_plots_fits.py  test_publish.py  two_electron_CV.py
.github/workflows/: ci.yml
docs/source/: conf.py  faq.rst  fit_curve.rst  getting-started.rst  index.rst  mechanisms.rst  modules.rst
docs/source/examples/: cvsim_examples.ipynb
src/cvsim/: fit_curve.py  mechanisms.py
tests/: test_fit_curve.py  test_mechanisms.py
