# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvsim"
version = "1.0.0"
authors = [
    { name="Eric Fell", email="efell@g.harvard.edu" },
    { name="Jeremy Fell", email="jfell@sfu.ca"},
]
description = "A package for cyclic voltammetry simulation via the semi-analytical method"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["scipy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["electrochemistry", "cyclic voltammetry"]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://github.com/ericfell/CVsim"
Documentation = "https://cvsim.readthedocs.io/en/latest/index.html"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"